--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core"]
 	path = core
-	url = https://github.com/smaznet/simplePhpBot
+	url = https://github.com/smaznet/simplePhpBot.git
